--- a/index.html
+++ b/index.html
@@ -1,13 +1,83 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Connect 4</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+</head>
+
+<body>
+    <div class="container text-center">
+        <h1>Welcome to Connect Four!</h1>
+        <h2>Connect 4 chips to win!</h2>
+        <h3>Let's Start!</h3>
+        <table class="board">
+            <tr>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+            </tr>
+            <tr>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+            </tr>
+            <tr>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+            </tr>
+            <tr>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+            </tr>
+            <tr>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+            </tr>
+            <tr>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+                <td><button></button></td>
+            </tr>
+        </table>
+    </div>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </body>
+
 </html>
