--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Welcome to Connect Four!</h1>
         <h2>Connect 4 chips to win!</h2>
         <h3>Let's Start!</h3>
-        <table class="board">
+        <table class="board m-auto acc">
             <tr>
                 <td><button></button></td>
                 <td><button></button></td>
@@ -74,10 +74,9 @@
     </div>
 
 
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
